# RK2

./: CMakeLists.txt
.github/workflows/: cfr.yml
sources/: hamburger.cpp  hamburger_l.cpp  munition.cpp  munition_l.cpp
tests/: testfile.cpp
